--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 }
 
 nav {
+    background: rgba(138, 144, 255, 0.9);
     position: fixed;
     width: 100%;
     transition: all .5s ease;
@@ -282,6 +283,7 @@ nav {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    flex-wrap: wrap;
 }
 .details-wrapper .left, 
 .details-wrapper .right{
@@ -477,6 +479,61 @@ footer{
     background: #252525;
     padding: 10px;
     margin: 10px;
+}
+
+.add-product{
+    color: #000;
+    border: dashed 2px #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    text-decoration: none;
+}
+.add-product i{
+    font-size: 50px;
+    border: dashed 2px #000;
+    border-radius: 999px;
+    padding: 10px;
+}
+
+.add-form{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.input{
+    display: flex;
+    
+    flex-direction: column;
+    background: #e3e3e3;
+    padding: 30px;
+    border-radius: 10px;
+    gap: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+}
+
+.input input:not(:nth-child(2)){
+    width: 100%;
+    font-size: 18px;
+    padding: 5px 10px;
+    border: solid 2px gray;
+    background: transparent;
+    outline: none;
+}
+.input button{
+    background: blue;
+    color: #fff;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    width: 100%;
 }
 
 @media(max-width: 991px) {
