--- a/style.css
+++ b/style.css
@@ -110,6 +110,51 @@ nav {
     color: rgba(138, 144, 255, 0.9);
 }
 
+.up{
+    overflow: hidden;
+    background: #828fff;
+    position: fixed;
+    bottom: 30px;
+    right: -300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    height: 40px;
+    width: 40px;
+    color: #fff;
+    gap: 5px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all .5s ease;
+    padding: 0 10px;
+    transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+}
+.up.active{
+    right: 30px;
+}
+.up:hover{
+    width: 130px;
+}
+.up i{
+    font-size: 25px;
+    text-align: center;
+    margin-left: 5px;
+    transition: all .5s ease;
+}
+.up span{
+    white-space: nowrap;
+    width: 0px;
+    overflow: hidden;
+    transition: all .5s ease;
+}
+.up:hover span{
+    width: 100%;
+}
+.up:hover i{
+    margin-left: 0px;
+}
+
 .banner {
     width: 100%;
     min-height: 100vh;
